--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <br>
             <a href="contact.html"><img src="./icons/phone.svg" alt="contactlogo" width="40"> Contact mega</a>
         </ul>
-        <p style="width: 75%;">Pizzamaking is a sacred and divine art and the way we at make pizzas only refelcts the art. Enter mega pizzeria, the one stop shop for all of your pizza related cravings, we do not only make pizza but make them in such a way that it will leave a lasting memory of the other worldly taste of our pizzas in your mind!</p>
+        <p style="width: 75%;">Pizzamaking is a sacred and divine art and the way we make pizzas only refelcts the art. Enter mega pizzeria, the one stop shop for all of your pizza related cravings, we do not only make pizza but make them in such a way that it will leave a lasting memory of the other worldly taste of our pizzas in your mind!</p>
         <br>
     </div>
     <div align="center">
