--- a/order.html
+++ b/order.html
@@ -40,7 +40,7 @@
     <option value="Aagdola">Aagdola</option>
     <option value="Radhakuchi">Radhakuchi</option>
     <option value="Gog">Gog</option>
-    <option value="Namara">Namara</option>
+    <option value="Nanara">Nanara</option>
     <option value="Karara">Karara</option>
     <option value="Bihdia">Bihdia</option>
     <option value="Maru">Maru</option>
